--- a/backend/market/src/main/resources/application.properties
+++ b/backend/market/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-stacktrace=never
+jwt.refreshExpirationMs=360000000
 jwt.expirationMs=3600000
 jwt.secret=sbdhepsnfmsj
