foto produto Java

--- a/backend/market/src/main/resources/application.properties
+++ b/backend/market/src/main/resources/application.properties
@@ -10,3 +10,4 @@ server.error.include-stacktrace=never
 jwt.refreshExpirationMs=360000000
 jwt.expirationMs=3600000
 jwt.secret=sbdhepsnfmsj
+file.upload-dir=c:/uploads
