--- a/mobilemarket/package.json
+++ b/mobilemarket/package.json
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
+    "add": "^2.0.6",
+    "axios": "^1.4.0",
     "expo": "~49.0.8",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "jwt-decode": "^3.1.2",
+    "lottie-react-native": "5.1.6",
+    "or": "^0.2.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-modals": "^0.22.3",
+    "react-native-razorpay": "^2.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-redux": "^8.1.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
